# gaitool-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  name.json
.github/workflows/: cd.yml  ci.yml  ci_cross.yml  split_gui_cd.yml
assets/: 3.18.98.csv  all-en.csv  all.csv  filter-en.csv  filter.csv
chart_gui/: Cargo.toml
chart_gui/src/: app.rs  chart.rs  config.rs  data_process.rs  main.rs
data_process/: Cargo.toml
data_process/src/: main.rs
split_gui/: .gitignore  Cargo.toml
split_gui/src/: main.rs
src/: main.rs  preprocess.rs  utils.rs
src/core/: check.rs  concat.rs  diff.rs  export.rs  exporter.rs  filter.rs  mod.rs  split.rs  swrite.rs
src/utils/: mod.rs  preprocess.rs  util.rs
